--- a/index.html
+++ b/index.html
@@ -4,11 +4,60 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="main.css">
+    <link rel="shortcut icon" href="img/avatar.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <title>kacperdev.pl</title>
+    <title>Kacper | Front-end Developer</title>
 </head>
 <body>
-    <h1>Soon.</h1>
+    <div class=menu>
+        <a href="contact.html" class="btn btn-outline-primary">Kontakt</a>
+    </div>
+    <div class="ts">
+        <h1 id="title">Front-end Developer</h1>  
+        <h2 id="subtitle">Wszystkie informacje znajdziesz poniżej.</h2>
+        <img class="avatar" src="img/avatar.png">
+    </div>
+    <div class="aboutme-container">
+        <h1 id="about-me1">Cześć, jestem Kacper!</h1>
+        <h2 id="about-me2">Mam 16 lat, jestem początkującym programistą, zajmuję się głównie <br>tworzeniem stron internetowych, tworzeniem botów przystosowanych <br>pod komunikator discord. Na bieżąco staram się rozwijać swoje <br>umiejętności, a poniżej znajdziesz moje oferowane usługi.</h2>
+    </div>
+    <div class="orders-container">
+        <div class="orders-web">
+            <div class="web-img"><img src="img/icon.png" width="50" height="50"></div>
+            <div class="web-txt"><h1 id="web-txt-SI">Strony internetowe</h1></div>
+            <div class="web-txt2"><h2 id="web-txt-SI2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porta justo sit amet metus suscipit ullamcorper. Pellentesque bibendum imperdiet turpis, congue rhoncus tellus ornare et. Phasellus sagittis tempor est vitae mattis. Nam sit amet neque at magna ultrices accumsan eu sed orci. Suspendisse potenti. Aenean auctor finibus faucibus.</h1></div>
+            <div class="web-txt3"><h2 id="web-txt-SI3">Języki programowania:</h1></div>
+            <div class="web-txt4"><h2 id="web-txt-SI4">HTML<br>CSS<br>JavaScript</h1></div>
+        </div>
+        <div class="orders-bot">
+            <div class="web-img"><img src="img/icon.png" width="50" height="50"></div>
+            <div class="web-txt"><h1 id="web-txt-DB">Discord bot developer</h1></div>
+            <div class="web-txt2"><h2 id="web-txt-DB2">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porta justo sit amet metus suscipit ullamcorper. Pellentesque bibendum imperdiet turpis, congue rhoncus tellus ornare et. Phasellus sagittis tempor est vitae mattis. Nam sit amet neque at magna ultrices accumsan eu sed orci. Suspendisse potenti. Aenean auctor finibus faucibus.</h1></div>
+            <div class="web-txt3"><h2 id="web-txt-DB3">Języki programowania:</h1></div>
+            <div class="web-txt4"><h2 id="web-txt-DB4">JavaScript</h1></div>
+        </div>
+    </div>
+    <div class="projects-container">
+        <h1 id="myprojects">Moje projekty</h1>
+        <h2 id="myprojects-subtitle">Podtytuł moich projektów.</h2>
+            <div class="myprojects-web">
+                <div class="myprojects-txt"></div>
+                <div class="myprojects-img"><img src="img/img1.jpg" width="325" height="225"></div>
+            <div class="myprojects-web">
+                <div class="myprojects-txt"></div>
+                <div class="myprojects-img"><img src="img/img1.jpg" width="325" height="225"></div>
+            <div class="myprojects-web">
+                <div class="myprojects-txt"></div>
+                <div class="myprojects-img"><img src="img/img1.jpg" width="325" height="225"></div>
+            </div>
+        </div>
+    </div>
+</div>
+<footer>
+    <div class="footer-container">
+        <h1 id="footer-txt">Work in progress site.</h1>
+    </div>
+</footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
 </html>
