--- a/index.html
+++ b/index.html
@@ -1,36 +1,60 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-    <script src="main.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="img/avatar.png">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="main.css">
-    <title>kacperdev.pl</title>
-  </head>
-  <body>
-    <div class="alert alert-danger" role="alert">
-        Strona jest w trakcie prac technicznych!
-      </div>
-      <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" href="#">kacperdev.pl</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-              <div class="navbar-nav">
-                <a class="nav-link active" href="#">Home<span class="sr-only">(current)</span></a>
-                <a class="nav-link" href="#soon">soon</a>
-                <a class="nav-link" href="#soon">soon</a>
-                <a class="nav-link" href="#soon">soon</a>
-              </div>
+    <title>Kacper | Front-end Developer</title>
+</head>
+<body>
+    <nav>
+        <div class="menu">
+        <a href="contact.html" class="btn btn-outline-primary">Kontakt</a>
+        </div>
+    </nav>
+    <header class="introduction">
+        <h1 id="introduction-title">Front-end Developer</h1>  
+        <h2 id="introduction-subtitle">Wszystkie informacje znajdziesz poniżej.</h2>
+        <img src="img/avatar.png" class="img-fluid" alt="...">
+    </header>
+    <section class="aboutme">
+        <h1 id="aboutme-title">Cześć, jestem Kacper!</h1>
+        <h2 id="aboutme-content">Mam 16 lat, jestem początkującym programistą, zajmuję się głównie <br>tworzeniem stron internetowych, tworzeniem botów przystosowanych <br>pod komunikator discord. Na bieżąco staram się rozwijać swoje <br>umiejętności, a poniżej znajdziesz moje oferowane usługi.</h2>
+    </section>
+    <section class="orders">
+        <div class="orders-title">
+            <img src="img/icon.png" width="50" height="50">
+            <p>Strony internetowe</p>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porta justo sit amet metus suscipit ullamcorper. Pellentesque bibendum imperdiet turpis, congue rhoncus tellus ornare et. Phasellus sagittis tempor est vitae mattis. Nam sit amet neque at magna ultrices accumsan eu sed orci. Suspendisse potenti. Aenean auctor finibus faucibus.</p>
+            <p class="languages">Języki programowania:</p>
+            <p class="tools">HTML<br>CSS<br>JavaScript</p>
+        </div>
+        <div class="orders-title">
+            <img src="img/icon.png" width="50" height="50">
+            <p>Discord bot developer</p>
+            <p class="description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla porta justo sit amet metus suscipit ullamcorper. Pellentesque bibendum imperdiet turpis, congue rhoncus tellus ornare et. Phasellus sagittis tempor est vitae mattis. Nam sit amet neque at magna ultrices accumsan eu sed orci. Suspendisse potenti. Aenean auctor finibus faucibus.</p>
+            <p class="languages">Języki programowania:</p>
+            <p class="tools">JavaScript</p>
+        </div>
+    </section>
+    <section class="projects">
+        <h1 id="projects-title">Moje projekty</h1>
+        <h2 id="projects-subtitle">Podtytuł moich projektów.</h2>
+            <div class="myprojects-web">
+                <div class="myprojects-img"><img src="img/img1.jpg" width="325" height="225"></div>
+            <div class="myprojects-web">
+                <div class="myprojects-img"><img src="img/img1.jpg" width="325" height="225"></div>
+            <div class="myprojects-web">
+                <div class="myprojects-img"><img src="img/img1.jpg" width="325" height="225"></div>
             </div>
-          </nav>
-          <img src="img/test.jpg" class="img-fluid">
-      </header>
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-  </body>
+        </div>
+    </div>
+</section>
+<footer>
+        <h1 id="footer-content">Work in progress site.</h1>
+</footer>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+</body>
 </html>
